--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
     align-items: center;
     justify-content: center;
     caret-color: transparent;
-    font-family: poppins, roboto;
+    font-family: poppins, Arial, Helvetica, sans-serif;
     background-color: brown;
 }
 
@@ -20,8 +20,11 @@ body{
     flex-direction: column;
     border-radius: 30px;
     padding: 30px;
-    background-color: beige;
+    background-color: wheat;
     height: 100%;
+    max-width: 87%;
+    overflow-x: hidden;
+    box-shadow: 10px 10px 20px 10px rgba(0, 0, 0, 0.4);
 }   
 
 /* calculator screen */
@@ -49,7 +52,7 @@ body{
 .calculator .keypad button{
     background-color: #333;
     border: none;
-    box-shadow: inset 0 0 10px 5px rgba(0, 0, 0, 0.199);
+    box-shadow: inset 0 0 10px 5px rgba(0, 0, 0, 0.4);
     padding: 20px;
     border-radius: 10px;
     margin: 5px;
@@ -67,7 +70,7 @@ body{
     background-color: rgba(255, 0, 0, 0.842);
 }
 
-.calculator .keypad .operator-btn{
+.calculator .keypad .operator-btn, .calculator .keypad #percentage{
     background-color: orange;
 }
 
